--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -44,6 +44,24 @@
 
     </LinearLayout>
 
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
+            >
+
+        <ru.luckycactus.steamroulette.presentation.widget.GameView
+                android:id="@+id/gameView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        <include layout="@layout/empty_layout"/>
+
+        <include layout="@layout/fullscreen_progress"/>
+
+    </FrameLayout>
+
     <fragment
             android:id="@+id/menuSheet"
             android:name="ru.luckycactus.steamroulette.presentation.menu.MenuFragment"
