--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -50,7 +50,7 @@
             android:layout_marginTop="?attr/actionBarSize"
             >
 
-        <ru.luckycactus.steamroulette.presentation.widget.GameView
+        <ru.luckycactus.steamroulette.presentation.widget.GameRouletteView
                 android:id="@+id/gameView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
