--- a/app/src/main/res/layout/view_game_roulette.xml
+++ b/app/src/main/res/layout/view_game_roulette.xml
@@ -3,30 +3,26 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         >
 
-    <ImageView
-            android:id="@+id/ivGame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-    <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-    <Button
-            android:id="@+id/btnNextGame"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/next_game"
-            />
+            android:orientation="vertical"
+            >
 
-    <Button
-            android:id="@+id/btnHideAndNextGame"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hide_this_game"
-            />
+        <ImageView
+                android:id="@+id/ivGame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                />
+
+        <TextView
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                />
+
+    </LinearLayout>
 
 </merge>
