--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,17 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/menuSheet"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         >
+
+    <!-- Header -->
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/default_activity_margin"
+            android:paddingLeft="@dimen/default_activity_margin"
+            android:paddingTop="@dimen/default_activity_margin"
+            android:paddingEnd="4dp"
+            android:paddingRight="4dp"
+            android:paddingBottom="@dimen/default_activity_margin"
+            >
+
+        <ImageView
+                android:id="@+id/ivAvatar"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:src="@drawable/avatar_placeholder"
+                />
+
+        <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                >
+
+            <TextView
+                    android:id="@+id/tvNickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="luckycactus"
+                    />
+
+            <TextView
+                    android:id="@+id/tvGamesCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="1024 игр на аккаунте"
+                    />
+
+            <TextView
+                    android:id="@+id/tvGamesUpdateDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Последняя синхронизация: 2 дня назад"
+                    />
+
+        </LinearLayout>
+
+
+        <ImageView
+                android:id="@+id/btnRefreshProfile"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@drawable/selectable_item_background_oval"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_refresh_white_24dp"
+                />
+
+    </LinearLayout>
+
+    <include layout="@layout/divider" />
 
     <Button
             android:id="@+id/btnExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/selectable_item_background"
             android:text="@string/exit"
             />
 
