--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -1,101 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
+        android:padding="@dimen/default_activity_margin"
         >
 
     <LinearLayout
+            android:id="@+id/gameRouletteLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical"
             >
 
-        <LinearLayout
-                android:id="@+id/toolbar"
+
+        <ru.luckycactus.steamroulette.presentation.widget.GameView
+                android:id="@+id/gameView"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:gravity="center_vertical"
-                >
+                android:layout_height="wrap_content"
+                />
 
-            <ImageView
-                    android:id="@+id/ivAvatar"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/avatar_placeholder"
-                    />
+        <Button
+                android:id="@+id/btnNextGame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/next_game"
+                />
 
-            <TextView
-                    android:id="@+id/tvNickname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:paddingStart="8dp"
-                    android:paddingLeft="8dp"
-                    tools:text="luckycactus"
-                    />
-
-        </LinearLayout>
+        <Button
+                android:id="@+id/btnHideAndNextGame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hide_this_game"
+                />
 
     </LinearLayout>
 
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:animateLayoutChanges="true"
-            >
+    <include layout="@layout/empty_layout" />
 
-        <LinearLayout
-                android:id="@+id/gameRouletteLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
+    <include layout="@layout/fullscreen_progress" />
 
-
-            <ru.luckycactus.steamroulette.presentation.widget.GameView
-                    android:id="@+id/gameView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    />
-
-            <Button
-                    android:id="@+id/btnNextGame"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/next_game"
-                    />
-
-            <Button
-                    android:id="@+id/btnHideAndNextGame"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/hide_this_game"
-                    />
-
-        </LinearLayout>
-
-        <include layout="@layout/empty_layout"/>
-
-        <include layout="@layout/fullscreen_progress"/>
-
-    </FrameLayout>
-
-    <fragment
-            android:id="@+id/menuSheet"
-            android:name="ru.luckycactus.steamroulette.presentation.menu.MenuFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            app:behavior_peekHeight="0dp"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-            />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</FrameLayout>
