--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="default_activity_margin">8dp</dimen>
+    <dimen name="default_activity_margin">16dp</dimen>
     <dimen name="standard_progress_bar_size">48dp</dimen>
     <dimen name="cardview_corner_radius">4dp</dimen>
+    <dimen name="dialog_corner_radius">8dp</dimen>
 </resources>
