--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -19,7 +19,8 @@
         <ru.luckycactus.steamroulette.presentation.widget.GameView
                 android:id="@+id/gameView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 />
 
         <Button
