--- a/app/src/main/res/drawable/bottom_sheet_background.xml
+++ b/app/src/main/res/drawable/bottom_sheet_background.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle"
         >
-    <solid android:color="@color/primaryLight" />
+    <solid android:color="@color/primary" />
     <corners
             android:topLeftRadius="@dimen/dialog_corner_radius"
             android:topRightRadius="@dimen/dialog_corner_radius"
