--- a/app/src/main/res/layout/view_game_roulette.xml
+++ b/app/src/main/res/layout/view_game_roulette.xml
@@ -1,28 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:parentTag="androidx.cardview.widget.CardView"
         >
 
-    <LinearLayout
+    <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             >
-
-        <ImageView
-                android:id="@+id/ivGame"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                />
 
         <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="4dp"
+                android:padding="8dp"
+                tools:text="Final Fantasy XIV: A Realm Reborn"
+                android:layout_gravity="center"
+                android:textSize="36sp"
+                android:gravity="center"
+                android:maxLines="2"
+                app:autoSizeTextType="uniform"
                 />
 
-    </LinearLayout>
+        <ImageView
+                android:id="@+id/ivGame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                />
+
+
+    </FrameLayout>
 
 </merge>
