--- a/app/src/main/res/layout/view_game_roulette.xml
+++ b/app/src/main/res/layout/view_game_roulette.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         tools:parentTag="androidx.cardview.widget.CardView"
         >
-
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
 
         <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                tools:text="Final Fantasy XIV: A Realm Reborn"
                 android:layout_gravity="center"
-                android:textSize="36sp"
                 android:gravity="center"
                 android:maxLines="2"
+                android:padding="8dp"
+                android:textSize="36sp"
                 app:autoSizeTextType="uniform"
+                tools:text="Final Fantasy XIV: A Realm Reborn"
+                />
+
+        <ImageView
+                android:id="@+id/ivBlur"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 />
 
         <ImageView
                 android:id="@+id/ivGame"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
                 />
 
-
-    </FrameLayout>
 
 </merge>
