--- a/app/src/main/res/layout/view_game_roulette.xml
+++ b/app/src/main/res/layout/view_game_roulette.xml
@@ -6,30 +6,36 @@
         tools:parentTag="androidx.cardview.widget.CardView"
         >
 
-        <TextView
-                android:id="@+id/tvName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:maxLines="2"
-                android:padding="8dp"
-                android:textSize="36sp"
-                app:autoSizeTextType="uniform"
-                tools:text="Final Fantasy XIV: A Realm Reborn"
-                />
+    <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:maxLines="2"
+            android:padding="8dp"
+            android:textSize="36sp"
+            app:autoSizeTextType="uniform"
+            tools:text="Final Fantasy XIV: A Realm Reborn"
+            />
 
-        <ImageView
-                android:id="@+id/ivBlur"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
+    <ImageView
+            android:id="@+id/ivBlur"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
-        <ImageView
-                android:id="@+id/ivGame"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
+    <ImageView
+            android:id="@+id/ivGame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/cover_glare"
+            />
 
 
 </merge>
