--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -22,8 +22,8 @@
                 android:layout_height="0dp"
                 android:layout_marginBottom="16dp"
                 android:clipChildren="false"
-                android:inAnimation="@android:anim/slide_in_left"
-                android:outAnimation="@android:anim/slide_out_right"
+                android:inAnimation="@anim/game_switcher_in"
+                android:outAnimation="@anim/game_switcher_out"
                 app:layout_constraintBottom_toTopOf="@id/fabSteamInfo"
                 app:layout_constraintDimensionRatio="2:3"
                 app:layout_constraintLeft_toLeftOf="parent"
