--- a/app/src/main/res/anim/game_switcher_out.xml
+++ b/app/src/main/res/anim/game_switcher_out.xml
@@ -1,25 +1,32 @@
 <set
         xmlns:android="http://schemas.android.com/apk/res/android"
         >
-    <alpha
-            android:duration="300"
-            android:fromAlpha="1.0"
-            android:toAlpha="0.0"
-            />
+<!--    <alpha-->
+<!--            android:duration="300"-->
+<!--            android:fromAlpha="1.0"-->
+<!--            android:toAlpha="0.0"-->
+<!--            />-->
 
-    <rotate
-            android:duration="300"
-            android:fromDegrees="0"
-            android:toDegrees="20"
-            android:pivotX="50%"
-            android:pivotY="50%"
-            />
+<!--    <rotate-->
+<!--            android:duration="300"-->
+<!--            android:fromDegrees="0"-->
+<!--            android:toDegrees="20"-->
+<!--            android:pivotX="50%"-->
+<!--            android:pivotY="50%"-->
+<!--            />-->
+
+<!--    <translate-->
+<!--            android:duration="300"-->
+<!--            android:fromXDelta="0"-->
+<!--            android:toXDelta="100%p"-->
+<!--            android:fromYDelta="0"-->
+<!--            android:toYDelta="-20%p"-->
+<!--            />-->
 
     <translate
-            android:duration="300"
             android:fromXDelta="0"
-            android:toXDelta="100%p"
-            android:fromYDelta="0"
-            android:toYDelta="-20%p"
+            android:toXDelta="200%p"
+            android:duration="300"
+            android:interpolator="@android:anim/accelerate_interpolator"
             />
 </set>
