--- a/app/src/main/res/anim/game_switcher_in.xml
+++ b/app/src/main/res/anim/game_switcher_in.xml
@@ -1,26 +1,31 @@
 <set
-        xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--    <alpha-->
-    <!--            android:duration="300"-->
-    <!--            android:fromAlpha="0.0"-->
-    <!--            android:toAlpha="1.0"-->
-    <!--            />-->
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="500"
 
-    <!--    <scale-->
-    <!--            android:duration="300"-->
-    <!--            android:fromXScale="80%"-->
-    <!--            android:fromYScale="80%"-->
-    <!--            android:toXScale="100%"-->
-    <!--            android:toYScale="100%"-->
-    <!--            android:pivotX="50%"-->
-    <!--            android:pivotY="50%"-->
-    <!--            />-->
+        >
+    <!--        android:interpolator="@android:anim/decelerate_interpolator"-->
+    <!--        android:shareInterpolator="true"-->
 
-    <translate
-            android:fromXDelta="-200%p"
-            android:toXDelta="0"
-            android:duration="300"
-            android:interpolator="@android:anim/decelerate_interpolator"
-            />
+        <alpha
+                android:duration="300"
+                android:fromAlpha="0.0"
+                android:toAlpha="1.0"
+                />
+
+        <scale
+                android:duration="300"
+                android:fromXScale="80%"
+                android:fromYScale="80%"
+                android:toXScale="100%"
+                android:toYScale="100%"
+                android:pivotX="50%"
+                android:pivotY="50%"
+                />
+
+
+<!--    <translate-->
+<!--            android:fromXDelta="-150%p"-->
+<!--            android:toXDelta="0"-->
+<!--            />-->
 
 </set>
