--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="ripple_color">#15ffffff</color>
     <color name="ripple_color_2">#10ffffff</color>
     <color name="divider">#141A25</color>
+    <color name="dialog_background">@color/primaryLight</color>
 </resources>
