--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,21 @@
         <item name="backgroundTint">@color/primaryLight2</item>
     </style>
 
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:windowTitleStyle">@style/AlertDialogStyle.Title</item>
+        <item name="android:background">@drawable/dialog_background</item>
+        <item name="windowFixedWidthMajor">90%</item>
+        <item name="windowFixedWidthMinor">90%</item>
+    </style>
+
+    <style name="AlertDialogStyle.Title" parent="RtlOverlay.DialogWindowTitle.AppCompat">
+        <item name="android:textColor">@color/primary</item>
+    </style>
+
+    <style name="DialogAnimationStyle" parent="@android:style/Animation.Activity">
+        <item name="android:windowEnterAnimation">@anim/dialog_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_out</item>
+    </style>
+
 </resources>
