--- a/app/src/main/res/layout/fullscreen_progress.xml
+++ b/app/src/main/res/layout/fullscreen_progress.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/progress"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -8,9 +9,9 @@
         android:visibility="gone"
         >
 
-    <ProgressBar
-            android:layout_width="@dimen/standard_progress_bar_size"
-            android:layout_height="@dimen/standard_progress_bar_size"
+    <ru.luckycactus.steamroulette.presentation.widget.LuxuryProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             />
 
