--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,6 +10,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            style="@style/Widget.LuxuryProgressBar"
             android:visibility="gone"
             />
 
@@ -28,7 +29,7 @@
                 android:hint="Steam Id / Community Id"
                 />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnOk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
