--- a/app/src/main/res/layout/fullscreen_progress.xml
+++ b/app/src/main/res/layout/fullscreen_progress.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/progress"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -10,6 +9,7 @@
         >
 
     <ru.luckycactus.steamroulette.presentation.widget.LuxuryProgressBar
+            style="@style/Widget.LuxuryProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
