--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/menuSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
         <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
@@ -43,6 +43,8 @@
                     android:id="@+id/tvNickname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:textAppearance="?textAppearanceBody1"
                     tools:text="luckycactus"
                     />
 
@@ -51,6 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="1024 игр на аккаунте"
+                    android:textAppearance="?textAppearanceBody2"
                     />
 
             <TextView
@@ -58,6 +61,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="Последняя синхронизация: 2 дня назад"
+                    android:textAppearance="?textAppearanceCaption"
+                    android:lines="2"
+                    android:ellipsize="middle"
                     />
 
         </LinearLayout>
@@ -78,13 +84,13 @@
 
             <ru.luckycactus.steamroulette.presentation.widget.LuxuryProgressBar
                     android:id="@+id/profileRefreshProgressBar"
+                    style="@style/Widget.LuxuryProgressBar"
                     android:layout_width="@dimen/standard_progress_bar_size"
                     android:layout_height="@dimen/standard_progress_bar_size"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:padding="12dp"
+                    android:visibility="gone"
                     app:size="24dp"
-                    style="@style/Widget.LuxuryProgressBar"
                     />
 
         </FrameLayout>
@@ -95,10 +101,10 @@
 
     <com.google.android.material.button.MaterialButton
             android:id="@+id/btnExit"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/selectable_item_background"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:text="@string/exit"
             />
 
