--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -35,12 +35,14 @@
                     android:id="@+id/gameView1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    style="@style/Widget.MyTheme.GameView"
                     />
 
             <ru.luckycactus.steamroulette.presentation.widget.GameView
                     android:id="@+id/gameView2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    style="@style/Widget.MyTheme.GameView"
                     />
 
         </ViewSwitcher>
